--- a/social-rating-flink-job/pom.xml
+++ b/social-rating-flink-job/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<flink.version>1.20.1</flink.version>
-		<target.java.version>1.8</target.java.version>
+		<target.java.version>11</target.java.version>
 		<scala.binary.version>2.12</scala.binary.version>
 		<maven.compiler.source>${target.java.version}</maven.compiler.source>
 		<maven.compiler.target>${target.java.version}</maven.compiler.target>
@@ -104,6 +104,14 @@
 			<artifactId>protobuf-java</artifactId>
 			<version>3.25.3</version> <!-- Check for compatible version -->
 			<scope>compile</scope>
+		</dependency>
+
+		<!-- Add shaded Netty gRPC implementation needed by Dgraph -->
+		<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-netty-shaded</artifactId>
+			<version>1.62.2</version> <!-- Use the same version as grpc-stub -->
+			<scope>runtime</scope> <!-- Typically runtime scope for shaded JARs -->
 		</dependency>
 
 		<!-- ClickHouse JDBC Driver -->
